<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="68px"></android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/tv_list_state_text"
        style="@style/MediaListEmptyAlertTextStyle"
        android:text="@string/tv_alert_photo_list_empty_text" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30px"
        android:layout_marginRight="42px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5px"
            android:text="@string/tv_count_text"
            android:textColor="@android:color/white"
            android:textSize="13px" />

        <TextView
            android:id="@+id/tv_count_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_count_num_def"
            android:textColor="@android:color/white"
            android:textSize="20px" />
    </LinearLayout>


</RelativeLayout>
