<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/videoBottombar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@drawable/video_bottom_bar_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/iv_list"
            style="@style/VideoBottomBarStyle"
            android:layout_marginLeft="72px"
            android:src="@drawable/selector_video_btn_list_icon" />

        <ImageView
            android:id="@+id/iv_prev"
            style="@style/VideoBottomBarStyle"
            android:layout_marginLeft="46px"
            android:src="@drawable/selector_video_btn_prev" />

        <ImageView
            android:id="@+id/iv_switch"
            style="@style/VideoBottomBarStyle"
            android:layout_marginLeft="41px"
            android:src="@drawable/selector_video_btn_play" />


        <ImageView
            android:id="@+id/iv_next"
            style="@style/VideoBottomBarStyle"
            android:layout_marginLeft="42px"
            android:src="@drawable/selector_video_btn_next" />

        <SeekBar
            android:id="@+id/sb_video"
            android:layout_width="634px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36px"
            android:layout_marginRight="48px"
            android:max="0"
            android:maxHeight="5px"
            android:minHeight="5px"
            android:progressDrawable="@drawable/sb_style_layer_list"
            android:thumb="@drawable/slidingicon" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_curTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_curTime_text"
                android:textColor="@android:color/white"
                android:textSize="16px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_time_separator"
                android:textColor="@android:color/white"
                android:textSize="16px" />

            <TextView
                android:id="@+id/tv_totalTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_totalTime_text"
                android:textColor="@android:color/white"
                android:textSize="16px" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
